--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -23,7 +23,7 @@ const formattedDate = new Date(date).toLocaleDateString("en-US", {
   class="flex flex-col rounded-lg shadow-lg overflow-hidden border-transparant border-2 hover:border-teal-800"
 >
   <div class="flex-shrink-0">
-    <a href={`/${url}`}>
+    <a href={`/findajourney/${url}`}>
       <img
         class="h-64
          w-full object-cover"
@@ -35,11 +35,11 @@ const formattedDate = new Date(date).toLocaleDateString("en-US", {
   <div class="flex-1 bg-white p-6 flex flex-col justify-between">
     <div class="flex-1">
       <p class="text-sm font-medium text-teal-600">
-        <a href={`/journeys/${categorySlug}`} class="hover:underline"
+        <a href={`/findajourney/journeys/${categorySlug}`} class="hover:underline"
           >{category}</a
         >
       </p>
-      <a href={`/${url}`} class="block mt-2">
+      <a href={`/findajourney/${url}`} class="block mt-2">
         <p class="text-xl font-semibold text-gray-900 hover:underline">
           {title}
         </p>
