journey page fix 2

--- a/src/components/JourneyCard.astro
+++ b/src/components/JourneyCard.astro
@@ -10,7 +10,7 @@ const { title, description, url, categorySlug, imageUrl, imageAlt } =
     <a href={`/findajourney/journeys/${url}`}>
       <img
         class="h-48 w-full object-cover"
-        src={`/findajourney/${imageUrl}`}
+        src={`${imageUrl}`}
         alt={`${imageAlt}`}
       />
     </a>
