--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,6 +3,11 @@ import PageLayout from "../layouts/PageLayout.astro";
 import PostCard from "../components/PostCard.astro";
 import { getCollection } from 'astro:content';
 const allPosts = await getCollection('blog');
+allPosts.sort((a, b) => {
+  const pubDateA = new Date(a.data.pubDate);
+  const pubDateB: Date = new Date(b.data.pubDate);
+  return pubDateB.getTime() - pubDateA.getTime();
+});
 const pageTitle = "Blog";
 const pageDescription = "Read about all of our adventures!";
 ---
