--- a/src/pages/journeys/[...slug].astro
+++ b/src/pages/journeys/[...slug].astro
@@ -18,6 +18,11 @@ const { Content } = await entry.render();
 const allPosts = await getCollection("blog", ({ data }) => {
   return data.category.name === "Slovenia 2022";
 });
+allPosts.sort((a, b) => {
+  const pubDateA = new Date(a.data.pubDate);
+  const pubDateB: Date = new Date(b.data.pubDate);
+  return pubDateB.getTime() - pubDateA.getTime();
+});
 
 const formattedDate = new Date(entry.data.pubDate).toLocaleDateString("en-US", {
   year: "numeric",
