--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -36,7 +36,7 @@ allPosts.sort((a, b) => {
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✈️</text></svg>"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧭</text></svg>"
     />
     <link href={`https://site.com/${entry.data.slug}`} rel="canonical" />
     <meta name="viewport" content="width=device-width" />
