Updated links and content formatting

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const pageDescription = "Your heart is your guide ❤️";
       </p>
       <div class="space-x-4 block pb-6">
         <a
-          href="/journeys"
+          href="/findajourney/journeys"
           class="inline-block text-white py-4 px-8 border border-transparent rounded-md text-lg font-bold bg-teal-600 hover:text-teal-50"
         >
           Journeys
