--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -65,7 +65,7 @@ allPosts.sort((a, b) => {
       </h1>
       <img src={`${entry.data.image.url}`} alt={`${entry.data.image.alt}`} />
       <p class="font-medium py-5">
-        Read more stories of this trip: <a
+        Read more stories of this trip:<br/><a
           href={`/findajourney/journeys/${entry.data.category.slug}`}
           class="bg-teal-800 p-2 rounded-md no-underline text-white hover:text-teal-50"
           >{entry.data.category.name}</a
@@ -73,7 +73,7 @@ allPosts.sort((a, b) => {
       </p>
       <Content />
       <p class="font-medium py-5">
-        Read more stories of this trip: <a
+        Read more stories of this trip:<br/><a
           href={`/findajourney/journeys/${entry.data.category.slug}`}
           class="bg-teal-800 p-2 rounded-md no-underline text-white hover:text-teal-50"
           >{entry.data.category.name}</a
