Update work with us link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,7 +81,7 @@ const pageDescription = "Your heart is your guide ❤️";
         </dl>
         <div class="mx-auto text-center mt-8">
           <a
-            href="/work-with-us"
+            href="findajourney/work-with-us"
             class="bg-white py-2 px-12 border border-transparent rounded-md text-base font-medium text-teal-600 hover:bg-teal-50"
           >
             Work with us
