fixed mobile menu item

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -61,7 +61,7 @@
       </a>
       <a
         href="/findajourney/journeys"
-        class="text-base font-medium text-white hover:text-teal-50 hover:underline"
+        class="text-base font-medium text-white hover:text-teal-50 mt-2"
       >
         Journeys
       </a>
