--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@
     >
       <div class="flex items-center">
         <a
-          href="/findajourney/"
+          href="./"
           class="text-3xl text-white hover:text-teal-50 font-bold mb-2 hover:underline"
         >
           <span class="sr-only">Compass</span>
@@ -16,21 +16,21 @@
         </a>
         <div class="hidden ml-10 space-x-8 lg:block">
           <a
-            href="/findajourney/about"
+            href="/about"
             class="text-base font-medium text-white hover:text-teal-50 hover:underline"
           >
             About
           </a>
 
           <a
-            href="/findajourney/blog"
+            href="/blog"
             class="text-base font-medium text-white hover:text-teal-50 hover:underline"
           >
             Blog
           </a>
 
           <a
-            href="/findajourney/journeys"
+            href="/journeys"
             class="text-base font-medium text-white hover:text-teal-50 hover:underline"
           >
             Journeys
@@ -39,7 +39,7 @@
       </div>
       <div class="hidden ml-10 space-x-4 lg:block">
         <a
-          href="/findajourney/work-with-us"
+          href="/work-with-us"
           class="inline-block bg-white py-2 px-4 border border-transparent rounded-md text-base font-medium text-teal-600 hover:bg-teal-50 hover:underline"
           >Work with us</a
         >
@@ -47,27 +47,27 @@
     </div>
     <div class="py-4 flex flex-wrap justify-center space-x-6 lg:hidden">
       <a
-        href="/findajourney/about"
+        href="/about"
         class="text-base font-medium text-white hover:text-teal-50 mt-2"
       >
         About
       </a>
 
       <a
-        href="/findajourney/blog"
+        href="/blog"
         class="text-base font-medium text-white hover:text-teal-50 mt-2"
       >
         Blog
       </a>
       <a
-        href="/findajourney/journeys"
+        href="/journeys"
         class="text-base font-medium text-white hover:text-teal-50 mt-2"
       >
         Journeys
       </a>
 
       <a
-        href="/findajourney/work-with-us"
+        href="/work-with-us"
         class="inline-block bg-white py-2 px-4 border border-transparent rounded-md text-base font-medium text-teal-600 hover:bg-teal-50"
       >
         Work with us
