--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const pageDescription = "Your heart is your guide ❤️";
       </p>
       <div class="space-x-4 block pb-6">
         <a
-          href="/findajourney/journeys"
+          href="/journeys"
           class="inline-block text-white py-4 px-8 border border-transparent rounded-md text-lg font-bold bg-teal-600 hover:text-teal-50"
         >
           Journeys
@@ -48,7 +48,7 @@ const pageDescription = "Your heart is your guide ❤️";
 
     <div class="bg-teal-800 my-5 rounded-md mt-10">
       <div
-        class="max-w-7xl mx-auto py-6 px-4 sm:py-16 sm:px-6 lg:px-8 lg:py-10"
+        class="max-w-7xl mx-auto pb-6 pt-3 px-4 sm:pb-16 sm:pt-8 sm:px-6 lg:px-8 lg:pb-10 lg:pt-5"
       >
         <div class="max-w-4xl mx-auto text-center"></div>
         <dl
@@ -81,7 +81,7 @@ const pageDescription = "Your heart is your guide ❤️";
         </dl>
         <div class="mx-auto text-center mt-8">
           <a
-            href="/findajourney/work-with-us"
+            href="/work-with-us"
             class="bg-white py-2 px-12 border border-transparent rounded-md text-base font-medium text-teal-600 hover:bg-teal-50"
           >
             Work with us
