--- a/src/components/JourneyCard.astro
+++ b/src/components/JourneyCard.astro
@@ -7,7 +7,7 @@ const { title, description, url, categorySlug, imageUrl, imageAlt } =
   class="flex flex-col rounded-lg shadow-lg overflow-hidden border-transparant border-2 hover:border-teal-800"
 >
   <div class="flex-shrink-0">
-    <a href={`/findajourney/journeys/${url}`}>
+    <a href={`/journeys/${url}`}>
       <img
         class="h-48 w-full object-cover"
         src={`${imageUrl}`}
@@ -17,7 +17,7 @@ const { title, description, url, categorySlug, imageUrl, imageAlt } =
   </div>
   <div class="flex-1 bg-white p-6 flex flex-col justify-between">
     <div class="flex-1">
-      <a href={`/findajourney/journeys/${url}`} class="block mt-2">
+      <a href={`/journeys/${url}`} class="block mt-2">
         <p class="text-xl font-semibold text-gray-900">
           {title}
         </p>
