--- a/src/pages/work-with-us.astro
+++ b/src/pages/work-with-us.astro
@@ -77,7 +77,7 @@ const pageDescription =
 
     <div class="bg-teal-800 my-5 rounded-md">
       <div
-        class="max-w-7xl mx-auto py-6 px-4 sm:py-16 sm:px-6 lg:px-8 lg:py-10"
+        class="max-w-7xl mx-auto pb-6 pt-3 px-4 sm:pb-16 sm:pt-8 sm:px-6 lg:px-8 lg:pb-10 lg:pt-5"
       >
         <div class="max-w-4xl mx-auto text-center">
           <h2 class="text-3xl font-extrabold text-white sm:text-4xl">
