--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@
     >
       <div class="flex items-center">
         <a
-          href="./"
+          href="/"
           class="text-3xl text-white hover:text-teal-50 font-bold mb-2 hover:underline"
         >
           <span class="sr-only">Compass</span>
