--- a/src/layouts/PageLayout2.astro
+++ b/src/layouts/PageLayout2.astro
@@ -12,6 +12,15 @@ const { pageTitle } = Astro.props;
     <title>{pageTitle}</title>
   </head>
   <body>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RR6ZBL1PNP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-RR6ZBL1PNP');
+  </script>
     <Header />
     <main class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 p-4">
       <slot />
