--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -38,13 +38,14 @@ const formattedDate = new Date(date).toLocaleDateString("en-US", {
     </a>
   </div>
   <div class="flex-1 bg-white p-6 flex flex-col justify-between">
+    <a href={`/${url}`} class="block">
     <div class="flex-1">
       <p class="text-sm font-medium text-teal-600">
         <a href={`/journeys/${categorySlug}`} class="hover:underline"
           >{category}</a
         >
       </p>
-      <a href={`/${url}`} class="block mt-2">
+      <a href={`/${url}`} class="block">
         <p class="text-xl font-semibold text-gray-900 hover:underline">
           {title}
         </p>
