--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,9 @@
 import PageLayout from "../layouts/PageLayout.astro";
 import PostCard from "../components/PostCard.astro";
 import { getCollection } from "astro:content";
-const allPosts = await getCollection("blog");
+const allPosts = await getCollection("blog", ({ data  }) => {
+  return data.category.episode !== null && data.category.episode !== undefined;
+});
 allPosts.sort((a, b) => {
   const pubDateA = new Date(a.data.pubDate);
   const pubDateB: Date = new Date(b.data.pubDate);
