--- a/src/pages/journeys/[...slug].astro
+++ b/src/pages/journeys/[...slug].astro
@@ -98,7 +98,7 @@ const formattedDate = new Date(entry.data.pubDate).toLocaleDateString("en-US", {
       allInspirationPosts.map((post) => (
         <SmallCard
           title={post.data.title}
-          description={post.data.description}
+          url={post.slug}
           category={post.data.category.name}
           categorySlug={post.data.category.slug}
         />
