--- a/src/pages/journeys/index.astro
+++ b/src/pages/journeys/index.astro
@@ -1,6 +1,7 @@
 ---
 import PageLayout from "../../layouts/PageLayout.astro";
 import JourneyCard from "../../components/JourneyCard.astro";
+import JourneyMap from "../../components/JourneyMap.astro";
 import { getCollection } from 'astro:content';
 const allPosts = await getCollection('journeys');
 allPosts.sort((a, b) => {
@@ -9,7 +10,6 @@ allPosts.sort((a, b) => {
   return pubDateB.getTime() - pubDateA.getTime();
 });
 const pageTitle = "Journeys";
-const pageDescription = "Find your next journey!";
 ---
 
 <PageLayout >
@@ -22,16 +22,14 @@ const pageDescription = "Find your next journey!";
     <div class="relative max-w-7xl mx-auto">
       <div class="text-center">
         <h2
-          class="text-3xl tracking-tight font-extrabold text-slate-800 sm:text-4xl"
+          class="text-3xl tracking-tight font-extrabold text-slate-800 sm:text-4xl mb-4"
         >
           {pageTitle}
         </h2>
-        <p class="mt-3 max-w-2xl mx-auto text-xl text-gray-500 sm:mt-4">
-          {pageDescription}
-        </p>
+        <JourneyMap />
       </div>
       <div
-        class="mt-12 max-w-lg mx-auto grid gap-5 lg:grid-cols-3 lg:max-w-none"
+        class="mt-6 max-w-lg mx-auto grid gap-5 lg:grid-cols-3 lg:max-w-none"
       >
         {
           allPosts.map((post) => (
@@ -49,3 +47,22 @@ const pageDescription = "Find your next journey!";
     </div>
   </div>
 </PageLayout>
+
+<script>
+  function loadLeafletScript() {
+    const link = document.createElement('link');
+    link.rel = 'stylesheet';
+    link.href = 'https://unpkg.com/leaflet@1.9.4/dist/leaflet.css';
+    document.head.appendChild(link);
+
+    const script = document.createElement('script');
+    script.src = 'https://unpkg.com/leaflet@1.9.4/dist/leaflet.js';
+    script.onload = () => {
+      const event = new Event('leafletloaded');
+      window.dispatchEvent(event);
+    };
+    document.head.appendChild(script);
+  }
+
+  window.addEventListener('load', loadLeafletScript);
+</script>
